--- a/portfolio.html
+++ b/portfolio.html
@@ -24,13 +24,16 @@
           </ul>
         </nav>
         <address class="contact">
-          <a href="tel:+3809611111111" class="contact-link icone-telephone"
-            >+380961111111</a
+          <a href="tel:+3809611111111" class="contact-link">
+            <svg class="ico-n" width="10" height="15">
+              <use href="./image/sprite.svg#smartphone"></use></svg
+            >+38096111111</a
           >
-          <a
-            href="mailto:info@devstudio.com"
-            class="contact-link icone-envelope"
-            >info@devstudio.com
+          <a class="contact-link" href="mailto:info@devstudio.com">
+            <svg class="ico-n" width="16" height="11">
+              <use href="./image/sprite.svg#envelope"></use>
+            </svg>
+            info@devstudio.com
           </a>
         </address>
       </div>
