Переделывает замечания по векторной графике

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,8 +26,9 @@
         <address class="contact">
           <a href="tel:+3809611111111" class="contact-link">
             <svg class="ico-n" width="10" height="15">
-              <use href="./image/sprite.svg#smartphone"></use></svg
-            >+38096111111</a
+              <use href="./image/sprite.svg#smartphone"></use>
+            </svg>
+            +38096111111</a
           >
           <a class="contact-link" href="mailto:info@devstudio.com">
             <svg class="ico-n" width="16" height="11">
@@ -44,7 +45,9 @@
           <h1 class="title-portfolio">Our projects</h1>
           <ul class="filter-list list">
             <li class="item">
-              <button type="button" class="buttton-primary">Все</button>
+              <button type="button" class="buttton-primary">
+                Все
+              </button>
             </li>
             <li class="item">
               <button type="button" class="buttton-secondary">Веб-сайты</button>
