--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
         <address class="contact">
           <a href="tel:+3809611111111" class="contact-link">
             <svg class="ico-n" width="10" height="15">
-              <use href="./image/sprite.svg#smartphone"></use></svg
-            >+38096111111</a
+              <use href="./image/sprite.svg#smartphone"></use>
+            </svg>
+            +38096111111</a
           >
           <a class="contact-link" href="mailto:info@devstudio.com">
             <svg class="ico-n" width="16" height="11">
@@ -51,7 +52,8 @@
       <div class="overlay">
         <section class="hero">
           <h1 class="hero-title list">
-            Эффективные решения для вашего бизнеса
+            Эффективные решения <br />
+            для вашего бизнеса
           </h1>
           <a href="" class="button-hero">Заказать услугу</a>
         </section>
@@ -117,19 +119,29 @@
           <ul class="work-list list">
             <li class="item">
               <a href="">
-                <img src="image/img.png" alt="laptop" width="370" />
+                <img
+                  class="work"
+                  src="image/img.png"
+                  alt="laptop"
+                  width="370"
+                />
               </a>
               <h3 class="title-work-text">Десктопные приложения</h3>
             </li>
             <li class="item">
               <a href="">
-                <img src="image/box.png" alt="phone" width="370" />
+                <img class="work" src="image/box.png" alt="phone" width="370" />
               </a>
               <h3 class="title-work-text">Мобильные приложения</h3>
             </li>
             <li class="item">
               <a href="">
-                <img src="image/img1.png" alt="monitor" width="370" />
+                <img
+                  class="work"
+                  src="image/img1.png"
+                  alt="monitor"
+                  width="370"
+                />
               </a>
               <h3 class="title-work-text">Дизайнерские решения</h3>
             </li>
@@ -140,34 +152,34 @@
         <div class="container">
           <h2 class="section-title-studio">Наша команда</h2>
           <ul class="team-list list">
-            <li class="item">
+            <li class="item-team">
               <img src="image/John.jpg" alt="John" width="270" />
               <h3 class="title">John Smith</h3>
               <p class="text-team">Product Designer</p>
               <ul class="icone-link list">
-                <li class="social-link-card">
-                  <a href="" aria-label="Ссылка на Instagram">
+                <li class="card">
+                  <a class="link-card" href="" aria-label="Ссылка на Instagram">
                     <svg class="icon-card" width="20" height="20">
                       <use href="./image/sprite.svg#instagram-2"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-link-card">
-                  <a href="" aria-label="Ссылка на Twitter">
+                <li class="card">
+                  <a class="link-card" href="" aria-label="Ссылка на Twitter">
                     <svg class="icon-card" width="20" height="20">
                       <use href="./image/sprite.svg#twitter-1"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-link-card">
-                  <a href="" aria-label="Ссылка на Facebook">
+                <li class="card">
+                  <a class="link-card" href="" aria-label="Ссылка на Facebook">
                     <svg class="icon-card" width="20" height="20">
                       <use href="./image/sprite.svg#facebook-1"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-link-card">
-                  <a href="" aria-label="Ссылка на Linkedin">
+                <li class="card">
+                  <a class="link-card" href="" aria-label="Ссылка на Linkedin">
                     <svg class="icon-card" width="20" height="20">
                       <use href="./image/sprite.svg#linkedin-1"></use>
                     </svg>
@@ -176,34 +188,34 @@
               </ul>
             </li>
 
-            <li class="item">
+            <li class="item-team">
               <img src="image/Marta.jpg" alt="Marta" width="270" />
               <h3 class="title">Marta Stewart</h3>
               <p class="text-team">Frontend Developer</p>
               <ul class="icone-link list">
-                <li class="social-link-card">
-                  <a href="" aria-label="Ссылка на Instagram">
+                <li class="card">
+                  <a class="link-card" href="" aria-label="Ссылка на Instagram">
                     <svg class="icon-card" width="20" height="20">
                       <use href="./image/sprite.svg#instagram-2"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-link-card">
-                  <a href="" aria-label="Ссылка на Twitter">
+                <li class="card">
+                  <a class="link-card" href="" aria-label="Ссылка на Twitter">
                     <svg class="icon-card" width="20" height="20">
                       <use href="./image/sprite.svg#twitter-1"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-link-card">
-                  <a href="" aria-label="Ссылка на Facebook">
+                <li class="card">
+                  <a class="link-card" href="" aria-label="Ссылка на Facebook">
                     <svg class="icon-card" width="20" height="20">
                       <use href="./image/sprite.svg#facebook-1"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-link-card">
-                  <a href="" aria-label="Ссылка на Linkedin">
+                <li class="card">
+                  <a class="link-card" href="" aria-label="Ссылка на Linkedin">
                     <svg class="icon-card" width="20" height="20">
                       <use href="./image/sprite.svg#linkedin-1"></use>
                     </svg>
@@ -212,34 +224,34 @@
               </ul>
             </li>
 
-            <li class="item">
+            <li class="item-team">
               <img src="image/Robert.jpg" alt="Robert" width="270" />
               <h3 class="title">Robert Jakis</h3>
               <p class="text-team">Marketing</p>
               <ul class="icone-link list">
-                <li class="social-link-card">
-                  <a href="" aria-label="Ссылка на Instagram">
+                <li class="card">
+                  <a class="link-card" href="" aria-label="Ссылка на Instagram">
                     <svg class="icon-card" width="20" height="20">
                       <use href="./image/sprite.svg#instagram-2"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-link-card">
-                  <a href="" aria-label="Ссылка на Twitter">
+                <li class="card">
+                  <a class="link-card" href="" aria-label="Ссылка на Twitter">
                     <svg class="icon-card" width="20" height="20">
                       <use href="./image/sprite.svg#twitter-1"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-link-card">
-                  <a href="" aria-label="Ссылка на Facebook"
+                <li class="card">
+                  <a class="link-card" href="" aria-label="Ссылка на Facebook"
                     ><svg class="icon-card" width="20" height="20">
                       <use href="./image/sprite.svg#facebook-1"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-link-card">
-                  <a href="" aria-label="Ссылка на Linkedin"
+                <li class="card">
+                  <a class="link-card" href="" aria-label="Ссылка на Linkedin"
                     ><svg class="icon-card" width="20" height="20">
                       <use href="./image/sprite.svg#linkedin-1"></use>
                     </svg>
@@ -248,34 +260,34 @@
               </ul>
             </li>
 
-            <li class="item">
+            <li class="item-team">
               <img src="image/Martin.jpg" alt="Martin" width="270" />
               <h3 class="title">Martin Doe</h3>
               <p class="text-team">UI Designer</p>
               <ul class="icone-link list">
-                <li class="social-link-card">
-                  <a href="" aria-label="Ссылка на Instagram">
+                <li class="card">
+                  <a class="link-card" href="" aria-label="Ссылка на Instagram">
                     <svg class="icon-card" width="20" height="20">
                       <use href="./image/sprite.svg#instagram-2"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-link-card">
-                  <a href="" aria-label="Ссылка на Twitter">
+                <li class="card">
+                  <a class="link-card" href="" aria-label="Ссылка на Twitter">
                     <svg class="icon-card" width="20" height="20">
                       <use href="./image/sprite.svg#twitter-1"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-link-card">
-                  <a href="" aria-label="Ссылка на Facebook">
+                <li class="card">
+                  <a class="link-card" href="" aria-label="Ссылка на Facebook">
                     <svg class="icon-card" width="20" height="20">
                       <use href="./image/sprite.svg#facebook-1"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-link-card">
-                  <a href="" aria-label="Ссылка на Linkedin">
+                <li class="card">
+                  <a class="link-card" href="" aria-label="Ссылка на Linkedin">
                     <svg class="icon-card" width="20" height="20">
                       <use href="./image/sprite.svg#linkedin-1"></use>
                     </svg>
@@ -290,42 +302,42 @@
         <div class="container">
           <h2 class="section-title-studio">Постоянные клиенты</h2>
           <ul class="client-list list">
-            <li class="item">
+            <li class="item-client">
               <a class="link" href="">
                 <svg class="logo-clients" width="44.27" height="49.23">
                   <use href="./image/sprite.svg#logo-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="item">
+            <li class="item-client">
               <a href="">
                 <svg class="logo-clients" width="40" height="52">
                   <use href="./image/sprite.svg#logo-2"></use>
                 </svg>
               </a>
             </li>
-            <li class="item">
+            <li class="item-client">
               <a href="">
                 <svg class="logo-clients" width="41" height="42.6">
                   <use href="./image/sprite.svg#logo-3"></use>
                 </svg>
               </a>
             </li>
-            <li class="item">
+            <li class="item-client">
               <a class="logo-clients" href="">
                 <svg width="79.66" height="42.02">
                   <use href="./image/sprite.svg#logo-4"></use>
                 </svg>
               </a>
             </li>
-            <li class="item">
+            <li class="item-client">
               <a href="">
                 <svg class="logo-clients" width="59" height="47">
                   <use href="./image/sprite.svg#logo-5"></use>
                 </svg>
               </a>
             </li>
-            <li class="item">
+            <li class="item-client">
               <a href="">
                 <svg class="logo-clients" width="88.48" height="45.44">
                   <use href="./image/sprite.svg#logo-6"></use>
