--- a/portfolio.html
+++ b/portfolio.html
@@ -66,136 +66,160 @@
           </ul>
           <ul class="our-works-list list">
             <li class="item">
-              <a class="projects" href="">
-                <img src="./image-portfolio/img.jpg" alt="img" width="370" />
-                <h2 class="section-title-portfolio">Технокряк</h2>
-                <p class="primary-text">Веб-сайт</p>
-                <p class="secondary-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </a>
+              <div class="pj-link">
+                <a class="projects" href="">
+                  <img src="./image-portfolio/img.jpg" alt="img" width="370" />
+                  <h2 class="section-title-portfolio">Технокряк</h2>
+                  <p class="primary-text">Веб-сайт</p>
+                </a>
+              </div>
+              <p class="secondary-text">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
             </li>
             <li class="item">
-              <a class="projects" href="">
-                <img
-                  src="./image-portfolio/img1.jpg"
-                  alt="Poster"
-                  width="370"
-                />
-                <h2 class="section-title-portfolio">
-                  Постер New Orlean vs Golden Starк
-                </h2>
-                <p class="primary-text">Дизайн</p>
-                <p class="secondary-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </a>
+              <div class="pj-link">
+                <a class="projects" href="">
+                  <img
+                    src="./image-portfolio/img1.jpg"
+                    alt="Poster"
+                    width="370"
+                  />
+                  <h2 class="section-title-portfolio">
+                    Постер New Orlean vs Golden Starк
+                  </h2>
+                  <p class="primary-text">Дизайн</p>
+                </a>
+              </div>
+              <p class="secondary-text">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
             </li>
             <li class="item">
-              <a class="projects" href="">
-                <img
-                  src="./image-portfolio/img2.jpg"
-                  alt="Seafood"
-                  width="370"
-                />
-                <h2 class="section-title-portfolio">Ресторан Seafood</h2>
-                <p class="primary-text">Приложение</p>
-                <p class="secondary-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </a>
+              <div class="pj-link">
+                <a class="projects" href="">
+                  <img
+                    src="./image-portfolio/img2.jpg"
+                    alt="Seafood"
+                    width="370"
+                  />
+                  <h2 class="section-title-portfolio">Ресторан Seafood</h2>
+                  <p class="primary-text">Приложение</p>
+                </a>
+              </div>
+              <p class="secondary-text">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
             </li>
             <li class="item">
-              <a class="projects" href="">
-                <img
-                  src="./image-portfolio/img3.jpg"
-                  alt="headphones"
-                  width="370"
-                />
-                <h2 class="section-title-portfolio">Проект Prime</h2>
-                <p class="primary-text">Маркетинг</p>
-                <p class="secondary-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </a>
+              <div class="pj-link">
+                <a class="projects" href="">
+                  <img
+                    src="./image-portfolio/img3.jpg"
+                    alt="headphones"
+                    width="370"
+                  />
+                  <h2 class="section-title-portfolio">Проект Prime</h2>
+                  <p class="primary-text">Маркетинг</p>
+                </a>
+              </div>
+              <p class="secondary-text">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
             </li>
             <li class="item">
-              <a class="projects" href="">
-                <img src="./image-portfolio/img4.jpg" alt="box" width="370" />
-                <h2 class="section-title-portfolio">Проект Boxes</h2>
-                <p class="primary-text">Приложение</p>
-                <p class="secondary-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </a>
+              <div class="pj-link">
+                <a class="projects" href="">
+                  <img src="./image-portfolio/img4.jpg" alt="box" width="370" />
+                  <h2 class="section-title-portfolio">Проект Boxes</h2>
+                  <p class="primary-text">Приложение</p>
+                </a>
+              </div>
+              <p class="secondary-text">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
             </li>
             <li class="item">
-              <a class="projects" href="">
-                <img
-                  src="./image-portfolio/img5.jpg"
-                  alt="monitor"
-                  width="370"
-                />
-                <h2 class="section-title-portfolio">
-                  Inspiration has no Borders
-                </h2>
-                <p class="primary-text">Веб-сайт</p>
-                <p class="secondary-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </a>
+              <div class="pj-link">
+                <a class="projects" href="">
+                  <img
+                    src="./image-portfolio/img5.jpg"
+                    alt="monitor"
+                    width="370"
+                  />
+                  <h2 class="section-title-portfolio">
+                    Inspiration has no Borders
+                  </h2>
+                  <p class="primary-text">Веб-сайт</p>
+                </a>
+              </div>
+              <p class="secondary-text">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
             </li>
             <li class="item">
-              <a class="projects" class="projects" href="">
-                <img src="./image-portfolio/img6.jpg" alt="book" width="370" />
-                <h2 class="section-title-portfolio">Издание Limited Edition</h2>
-                <p class="primary-text">Дизайн</p>
-                <p class="secondary-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </a>
+              <div class="pj-link">
+                <a class="projects" class="projects" href="">
+                  <img
+                    src="./image-portfolio/img6.jpg"
+                    alt="book"
+                    width="370"
+                  />
+                  <h2 class="section-title-portfolio">
+                    Издание Limited Edition
+                  </h2>
+                  <p class="primary-text">Дизайн</p>
+                </a>
+              </div>
+              <p class="secondary-text">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
             </li>
             <li class="item">
-              <a class="projects" href="">
-                <img src="./image-portfolio/img7.jpg" alt="lab" width="370" />
-                <h2 class="section-title-portfolio">Проект LAB</h2>
-                <p class="primary-text">Маркетинг</p>
-                <p class="secondary-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </a>
+              <div class="pj-link">
+                <a class="projects" href="">
+                  <img src="./image-portfolio/img7.jpg" alt="lab" width="370" />
+                  <h2 class="section-title-portfolio">Проект LAB</h2>
+                  <p class="primary-text">Маркетинг</p>
+                </a>
+              </div>
+              <p class="secondary-text">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
             </li>
             <li class="item">
-              <a class="projects" href="">
-                <img
-                  src="./image-portfolio/img8.jpg"
-                  alt="notebook"
-                  width="370"
-                />
-                <h2 class="section-title-portfolio">Growing Business</h2>
-                <p class="primary-text">Приложение</p>
-                <p class="secondary-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </a>
+              <div class="pj-link">
+                <a class="projects" href="">
+                  <img
+                    src="./image-portfolio/img8.jpg"
+                    alt="notebook"
+                    width="370"
+                  />
+                  <h2 class="section-title-portfolio">Growing Business</h2>
+                  <p class="primary-text">Приложение</p>
+                </a>
+              </div>
+              <p class="secondary-text">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
             </li>
           </ul>
         </div>
