--- a/portfolio.html
+++ b/portfolio.html
@@ -5,13 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio page</title>
     <link
-      rel="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <body>
     <header>
-      <div class="container main-container">
+      <div class="container main-container-portfolio">
         <nav class="nav">
           <a href="/" class="logo-header">
             <span class="logo-header-blue">Web</span>
@@ -19,7 +25,9 @@
           </a>
           <ul class="site-nav list">
             <li class="item"><a href="./index.html" class="link">Студия</a></li>
-            <li class="item"><a href="" class="link current">Портфолио</a></li>
+            <li class="item">
+              <a href="" class="link current-portfolio">Портфолио</a>
+            </li>
             <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
@@ -66,13 +74,16 @@
           </ul>
           <ul class="our-works-list list">
             <li class="item">
-              <div class="pj-link">
-                <a class="projects" href="">
-                  <img src="./image-portfolio/img.jpg" alt="img" width="370" />
-                  <h2 class="section-title-portfolio">Технокряк</h2>
-                  <p class="primary-text">Веб-сайт</p>
-                </a>
-              </div>
+              <a class="projects link" href="">
+                <img
+                  class="work"
+                  src="./image-portfolio/img.jpg"
+                  alt="img"
+                  width="370"
+                />
+                <h2 class="section-title-portfolio">Технокряк</h2>
+                <p class="primary-text">Веб-сайт</p>
+              </a>
               <p class="secondary-text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
@@ -80,19 +91,18 @@
               </p>
             </li>
             <li class="item">
-              <div class="pj-link">
-                <a class="projects" href="">
-                  <img
-                    src="./image-portfolio/img1.jpg"
-                    alt="Poster"
-                    width="370"
-                  />
-                  <h2 class="section-title-portfolio">
-                    Постер New Orlean vs Golden Starк
-                  </h2>
-                  <p class="primary-text">Дизайн</p>
-                </a>
-              </div>
+              <a class="projects link" href="">
+                <img
+                  class="work"
+                  src="./image-portfolio/img1.jpg"
+                  alt="Poster"
+                  width="370"
+                />
+                <h2 class="section-title-portfolio">
+                  Постер New Orlean vs Golden Starк
+                </h2>
+                <p class="primary-text">Дизайн</p>
+              </a>
               <p class="secondary-text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
@@ -100,17 +110,16 @@
               </p>
             </li>
             <li class="item">
-              <div class="pj-link">
-                <a class="projects" href="">
-                  <img
-                    src="./image-portfolio/img2.jpg"
-                    alt="Seafood"
-                    width="370"
-                  />
-                  <h2 class="section-title-portfolio">Ресторан Seafood</h2>
-                  <p class="primary-text">Приложение</p>
-                </a>
-              </div>
+              <a class="projects" href="">
+                <img
+                  class="work"
+                  src="./image-portfolio/img2.jpg"
+                  alt="Seafood"
+                  width="370"
+                />
+                <h2 class="section-title-portfolio">Ресторан Seafood</h2>
+                <p class="primary-text">Приложение</p>
+              </a>
               <p class="secondary-text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
@@ -118,17 +127,16 @@
               </p>
             </li>
             <li class="item">
-              <div class="pj-link">
-                <a class="projects" href="">
-                  <img
-                    src="./image-portfolio/img3.jpg"
-                    alt="headphones"
-                    width="370"
-                  />
-                  <h2 class="section-title-portfolio">Проект Prime</h2>
-                  <p class="primary-text">Маркетинг</p>
-                </a>
-              </div>
+              <a class="projects" href="">
+                <img
+                  class="work"
+                  src="./image-portfolio/img3.jpg"
+                  alt="headphones"
+                  width="370"
+                />
+                <h2 class="section-title-portfolio">Проект Prime</h2>
+                <p class="primary-text">Маркетинг</p>
+              </a>
               <p class="secondary-text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
@@ -136,13 +144,16 @@
               </p>
             </li>
             <li class="item">
-              <div class="pj-link">
-                <a class="projects" href="">
-                  <img src="./image-portfolio/img4.jpg" alt="box" width="370" />
-                  <h2 class="section-title-portfolio">Проект Boxes</h2>
-                  <p class="primary-text">Приложение</p>
-                </a>
-              </div>
+              <a class="projects" href="">
+                <img
+                  class="work"
+                  src="./image-portfolio/img4.jpg"
+                  alt="box"
+                  width="370"
+                />
+                <h2 class="section-title-portfolio">Проект Boxes</h2>
+                <p class="primary-text">Приложение</p>
+              </a>
               <p class="secondary-text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
@@ -150,19 +161,18 @@
               </p>
             </li>
             <li class="item">
-              <div class="pj-link">
-                <a class="projects" href="">
-                  <img
-                    src="./image-portfolio/img5.jpg"
-                    alt="monitor"
-                    width="370"
-                  />
-                  <h2 class="section-title-portfolio">
-                    Inspiration has no Borders
-                  </h2>
-                  <p class="primary-text">Веб-сайт</p>
-                </a>
-              </div>
+              <a class="projects" href="">
+                <img
+                  class="work"
+                  src="./image-portfolio/img5.jpg"
+                  alt="monitor"
+                  width="370"
+                />
+                <h2 class="section-title-portfolio">
+                  Inspiration has no Borders
+                </h2>
+                <p class="primary-text">Веб-сайт</p>
+              </a>
               <p class="secondary-text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
@@ -170,19 +180,18 @@
               </p>
             </li>
             <li class="item">
-              <div class="pj-link">
-                <a class="projects" class="projects" href="">
-                  <img
-                    src="./image-portfolio/img6.jpg"
-                    alt="book"
-                    width="370"
-                  />
-                  <h2 class="section-title-portfolio">
-                    Издание Limited Edition
-                  </h2>
-                  <p class="primary-text">Дизайн</p>
-                </a>
-              </div>
+              <a class="projects" class="projects" href="">
+                <img
+                  class="work"
+                  src="./image-portfolio/img6.jpg"
+                  alt="book"
+                  width="370"
+                />
+                <h2 class="section-title-portfolio">
+                  Издание Limited Edition
+                </h2>
+                <p class="primary-text">Дизайн</p>
+              </a>
               <p class="secondary-text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
@@ -190,13 +199,16 @@
               </p>
             </li>
             <li class="item">
-              <div class="pj-link">
-                <a class="projects" href="">
-                  <img src="./image-portfolio/img7.jpg" alt="lab" width="370" />
-                  <h2 class="section-title-portfolio">Проект LAB</h2>
-                  <p class="primary-text">Маркетинг</p>
-                </a>
-              </div>
+              <a class="projects" href="">
+                <img
+                  class="work"
+                  src="./image-portfolio/img7.jpg"
+                  alt="lab"
+                  width="370"
+                />
+                <h2 class="section-title-portfolio">Проект LAB</h2>
+                <p class="primary-text">Маркетинг</p>
+              </a>
               <p class="secondary-text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
@@ -204,17 +216,16 @@
               </p>
             </li>
             <li class="item">
-              <div class="pj-link">
-                <a class="projects" href="">
-                  <img
-                    src="./image-portfolio/img8.jpg"
-                    alt="notebook"
-                    width="370"
-                  />
-                  <h2 class="section-title-portfolio">Growing Business</h2>
-                  <p class="primary-text">Приложение</p>
-                </a>
-              </div>
+              <a class="projects" href="">
+                <img
+                  class="work"
+                  src="./image-portfolio/img8.jpg"
+                  alt="notebook"
+                  width="370"
+                />
+                <h2 class="section-title-portfolio">Growing Business</h2>
+                <p class="primary-text">Приложение</p>
+              </a>
               <p class="secondary-text">
                 Технокряк это современная площадка распространения коронавируса.
                 Компании используют эту платформу для цифрового шпионажа и атак
@@ -245,30 +256,30 @@
         <div class="social">
           <b class="join">присоединяйтесь</b>
           <ul class="icone-link list">
-            <li class="social-link">
+            <li>
               <a class="icon" href="" aria-label="Ссылка на Instagram">
-                <svg width="20" height="20">
+                <svg class="social-link" width="20" height="20">
                   <use href="./image/sprite.svg#instagram-2"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-link">
+            <li>
               <a class="icon" href="" aria-label="Ссылка на Twitter">
-                <svg width="20" height="20">
+                <svg class="social-link" width="20" height="20">
                   <use href="./image/sprite.svg#twitter-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-link">
+            <li>
               <a class="icon" href="" aria-label="Ссылка на Facebook">
-                <svg width="20" height="20">
+                <svg class="social-link" width="20" height="20">
                   <use href="./image/sprite.svg#facebook-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-link">
+            <li>
               <a class="icon" href="" aria-label="Ссылка на Linkedin">
-                <svg width="20" height="20">
+                <svg class="social-link" width="20" height="20">
                   <use href="./image/sprite.svg#linkedin-1"></use>
                 </svg>
               </a>
@@ -276,7 +287,7 @@
           </ul>
         </div>
         <div class="subscribing">
-          <b>Подпишитесь на рассылку</b>
+          <b class="join">подпишитесь на рассылку</b>
           <p class="text-mail">E-mail</p>
           <a href="" class="button-footer"
             >Подписаться
